# synchronous-block

./: .gitignore  README.md  pyproject.toml
api/: config.py  main.py  start_debug_server.py
api/alembic/: env.py
api/alembic/versions/: 7f430a414ed2_initial_migration.py  88044e779627_update_database_user_password_changed_.py
api/apps/auth/: authenticate.py  passwords.py  routes.py  tokens.py
api/apps/users/: db_ops.py  models.py  routes.py
api/db/: connectors.py  schema.py
api/loggers/: __init__.py  api_logger.py  performance_logger.py
local_measurements/: password_hashing_time.py  result.md
logs/: readme.txt
measurements/: readme.txt
measurements/concurrency/api_health_endpoint/: locustfile.py  results.csv
measurements/concurrency/api_register_endpoint/: locustfile.py  results.csv
measurements/performance/: __init__.py  utils.py
measurements/response_times/api_health_endpoint/: api_health_performance.data  response_time.py
measurements/response_times/api_register_endpoint/: api_register_performance.data  response_time.py
